k8s/base/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
spec:
  selector:
    matchLabels:
      app: account-service
  replicas: 1
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
      - name: account-service
        image: ghcr.io/sun-asterisk-research/microservices-sample/account-service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50051
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:50051"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        volumeMounts:
          - name: jwt-cert
            mountPath: /jwt-cert
      volumes:
        - name: jwt-cert
          configMap:
            name: jwt-cert
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  type: ClusterIP
  selector:
    app: account-service
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
