k8s/base/account-subgraph.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-subgraph
  labels:
    app: account-subgraph
spec:
  selector:
    matchLabels:
      app: account-subgraph
  replicas: 1
  template:
    metadata:
      labels:
        app: account-subgraph
    spec:
      containers:
      - name: account-subgraph
        image: ghcr.io/sun-asterisk-research/microservices-sample/account-subgraph
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 128Mi
        ports:
        - containerPort:  8000
---
apiVersion: v1
kind: Service
metadata:
  name: account-subgraph
spec:
  selector:
    app: account-subgraph
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
