k8s/base/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  postgres
  labels:
    app:  postgres
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app:  postgres
    spec:
      containers:
      - name:  postgres
        image:  postgres:14-alpine
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
        ports:
        - containerPort:  5432
          name:  postgres
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        - name: postgresql
          mountPath: /var/run/postgresql
        - name: postgres-init-script
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgres-data
          hostPath:
            path: /var/microservices-sample/postgresql-data
        - name: postgresql
          hostPath:
            path: /var/microservices-sample/postgresql
        - name: postgres-init-script
          configMap:
            name: postgres-scripts
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
  - port: 5432
