k8s/base/web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  selector:
    matchLabels:
      app: web-app
  replicas: 1
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: ghcr.io/sun-asterisk-research/microservices-example/web-app
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 256Mi
        ports:
        - containerPort: 8787
          name: web-app
        - containerPort: 40510
          name: live-reload
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: web-app
spec:
  selector:
    app: web-app
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8787
  - name: live-reload
    port: 40510
    targetPort: 40510
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
spec:
  ingressClassName: nginx
  rules:
  - host: blog.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              name: http
      - path: /socket
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              name: live-reload
